# prevent-cli

./: .craft.yml  .gitmodules  CHANGELOG.md  Makefile  README.md  command_dump.py  install.sh
.github/workflows/: build.yml  build_assets.yml  build_for_pypi.yml  ci-job.yml  ci.yml  create_release.yml  create_release_pr.yml  release-codecov-cli.yml  release.yml  release_flow.yml  test.yml
.github/workflows.old/: create_release_pr.yml
codecov-cli/: README.md  pyproject.toml  requirements.txt
codecov-cli/codecov_cli/: fallbacks.py  main.py  opentelemetry.py
codecov-cli/codecov_cli/commands/: upload.py  upload_coverage.py
codecov-cli/codecov_cli/helpers/: args.py  request.py
codecov-cli/codecov_cli/helpers/ci_adapters/: github_actions.py
codecov-cli/codecov_cli/services/upload/: __init__.py  file_finder.py  upload_sender.py
codecov-cli/codecov_cli/services/upload_coverage/: __init__.py
codecov-cli/scripts/: build_alpine.sh  build_alpine_arm.sh  build_linux.sh  build_linux_arm.sh
codecov-cli/tests/: requirements.in  requirements.txt  test_codecov_cli.py
codecov-cli/tests/helpers/: test_request.py  test_upload_sender.py
codecov-cli/tests/services/upload/: test_coverage_file_finder.py  test_upload_service.py
hooks/: pre-commit
prevent-cli/: command_dump.py  prevent-cli_commands  preventcli_commands  pyproject.toml
prevent-cli/src/prevent_cli/: main.py
scripts/: build_alpine.sh  build_linux.sh  bump-version.sh  pre-build.sh  uv-installer-0.7.8.sha256sum
