[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Tom Hu", email = "thomas.hu@sentry.io"},
]
maintainers = [
    {name = "Codecov Support", email = "support@codecov.io"},
]
description = "Codecov Command Line Interface"
dependencies = [
    "click==8.*",
    "ijson==3.*",
    "PyYAML==6.*",
    "responses==0.21.*",
    "sentry-sdk==2.*",
    "test_results_parser==0.5.4",
]
license = {file = "LICENSE"}
name = "codecov-cli"
readme = "README.md"
requires-python = ">= 3.9"
version = "10.4.0"

[project.scripts]
codecov = "codecov_cli.main:run"
codecovcli = "codecov_cli.main:run"

[tool.pytest.ini_options]
env = [
    "CODECOV_ENV=test",
]

[tool.setuptools]
packages = ["codecov_cli"]

[dependency-groups]
dev = [
    "pre-commit==3.*",
    "pytest==7.*",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "pytest-mock",
]
