[project]
name = "prevent-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "joseph-sentry", email = "joseph.sawaya@sentry.io" }
]
requires-python = ">=3.12"
dependencies = [
    "click==8.*",
    "codecov-cli>=10.3.0",
    "httpx==0.27.*",
    "ijson==3.*",
    "pyyaml==6.*",
    "regex",
    "responses==0.21.*",
    "sentry-sdk>=2.20.0",
    "test-results-parser==0.5.4",
    "tree-sitter==0.20.*",
    "wrapt>=1.17.2",
]


[project.scripts]
prevent = "prevent_cli.main:run"
prevent-cli = "prevent_cli.main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["prevent_cli"]

[tool.uv.sources]
codecov-cli = {path = "../codecov-cli"}

