[project]
name = "prevent-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Sentry", email = "oss@sentry.io" }]

requires-python = ">=3.9"
dependencies = [
    "codecov-cli>=10.4.0",
]

[project.scripts]
sentry-prevent-cli = "prevent_cli.main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["prevent_cli"]

[tool.uv.sources]
codecov-cli = { path = "../codecov-cli", editable = true }

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
